--- a/doc/source/_static/ui_shared.css
+++ b/doc/source/_static/ui_shared.css
@@ -7,23 +7,23 @@ p.rubric,
 div.code-block-caption span.caption-text,
 .toctree-wrapper p.caption,
 dl.simple dt strong,
-.ftw-cr-title {
+.fitzzftw-cr-title {
     font-family: 'TeXGyreHeros', sans-serif !important;
     font-weight: 700 !important;
     color: var(--ui-header-text) !important;
 }
 
 /* Changelog-Kategorien (Logik aus deinem Snippet) */
-.ftw-cr-added, .ftw-cr-changed, .ftw-cr-fixed {
+.fitzzftw-cr-added, .fitzzftw-cr-changed, .fitzzftw-cr-fixed {
     font-family: 'TeXGyreHeros', sans-serif !important;
     font-weight: 500 !important;
 }
-p.ftw-cr-added.rubric { color: var(--ftw-color-added) !important; font-size: 0.8rem !important; }
-p.ftw-cr-changed.rubric { color: var(--ftw-color-changed) !important; font-size: 0.8rem !important; }
-p.ftw-cr-fixed.rubric { color: var(--ftw-color-fixed) !important; font-size: 0.8rem !important; }
+p.fitzzftw-cr-added.rubric { color: var(--fitzzftw-color-added) !important; font-size: 0.8rem !important; }
+p.fitzzftw-cr-changed.rubric { color: var(--fitzzftw-color-changed) !important; font-size: 0.8rem !important; }
+p.fitzzftw-cr-fixed.rubric { color: var(--fitzzftw-color-fixed) !important; font-size: 0.8rem !important; }
 
 /* Die Titel-Box im Changelog */
-.ftw-cr-title {
+.fitzzftw-cr-title {
     font-weight: 800;
     font-size: 1.3rem !important;
     border-bottom: 2px solid var(--ui-active-color);
